# deep-philosopher

./: .gitignore  README.md  app.yaml  build_run.cmd  deep_elon.ipynb  deep_philosopher.ipynb  pyproject.toml  requirements.txt
app/: deep_philosopher.ipynb  deep_philosopher.py  server.py
app/data/: descartes1641.epub
app/static/: client.js  data_lm.pkl  style.css
app/view/: index.html
